Fixed double-tap zoom issue on mobile devices.

--- a/css/master.css
+++ b/css/master.css
@@ -30,6 +30,7 @@
 
 
 .btnContainer {
+  touch-action: manipulation;
   margin-top: 4vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
